[tool.poetry]
name = "resume"
version = "0.1.0"
description = ""
authors = ["Altair Bueno<business.altair.bueno@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
DateTime = "^4.4"
toml = "^0.10.2"
python-dateutil = "^2.8.2"
chevron = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
